[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/game/scripts/HudScreenGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/ui/sprites/ui-flat.png" type="Texture" id=2]
[ext_resource path="res://Assets/game/scenes/HudButtonSymbol.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/game/scenes/HudButtonMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/game/scripts/HudObjectFailBar.gd" type="Script" id=5]
[ext_resource path="res://Assets/fonts/Pacifico-Regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/ui/sprites/ui-forest-icon.png" type="Texture" id=7]
[ext_resource path="res://Assets/sprites/hud/hud-timer-icon.png" type="Texture" id=8]
[ext_resource path="res://Assets/fonts/Pacifico-Regular-Outline.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/sprites/hud/hud-fill-bar.png" type="Texture" id=10]
[ext_resource path="res://Assets/game/scripts/HudObjectGameBar.gd" type="Script" id=11]
[ext_resource path="res://Assets/game/scenes/HudObjectStepResult.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("animatedScore:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.518518, -0.197126, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animatedScore:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.870588, 1, 0.709804, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bg:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.470588, 0.203922, 0.0392157, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animatedScore:outline_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.235294, 0.0980392, 0.0156863, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "time-up-vfx"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05 ),
"update": 0,
"values": [ Color( 0.470588, 0.203922, 0.0392157, 1 ), Color( 0.694118, 0.219608, 0.360784, 1 ), Color( 0.470588, 0.203922, 0.0392157, 1 ), Color( 0.694118, 0.219608, 0.360784, 1 ), Color( 0.470588, 0.203922, 0.0392157, 1 ), Color( 0.694118, 0.219608, 0.360784, 1 ), Color( 0.470588, 0.203922, 0.0392157, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "time-win"
tracks/0/type = "value"
tracks/0/path = NodePath("animatedScore:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 1 ),
"transitions": PoolRealArray( 1, 4, 4, 1 ),
"update": 0,
"values": [ Color( 0.870588, 1, 0.709804, 0 ), Color( 0.870588, 1, 0.709804, 1 ), Color( 0.870588, 1, 0.709804, 1 ), Color( 0.870588, 1, 0.709804, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animatedScore:outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 1 ),
"transitions": PoolRealArray( 1, 4, 4, 1 ),
"update": 0,
"values": [ Color( 0.235294, 0.0980392, 0.0156863, 0 ), Color( 0.235294, 0.501961, 0.317647, 1 ), Color( 0.235294, 0.501961, 0.317647, 1 ), Color( 0.235294, 0.501961, 0.317647, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animatedScore:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 0.353554, 5.09824, 1 ),
"update": 0,
"values": [ Vector3( -0.263676, -0.788021, 0 ), Vector3( -0.263676, -0.429664, 0 ), Vector3( 1.28238, -0.429664, 0 ) ]
}

[node name="HudScreenGame" type="Spatial"]
script = ExtResource( 1 )
gameBarNodePath = NodePath("Top/HudObjectGameBar")
failBarNodePath = NodePath("Top/HudObjectFailBar")

[node name="Ref" type="Spatial" parent="."]

[node name="Color" type="Sprite3D" parent="Ref"]
visible = false
sorting_offset = 2.0
opacity = 0.17
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 450, 1050 )

[node name="Top" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="HudObjectGameBar" type="Spatial" parent="Top"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00201035, 0 )
script = ExtResource( 11 )
levelIconNode = NodePath("levelIcon")
levelLabelNode = NodePath("levelLabel")
fillTextureNode = NodePath("fillTexture")
animationPlayerNode = NodePath("../../ManualAnimationPlayer")
animatedScoreNode = NodePath("animatedScore")
scoreCounterNode = NodePath("scoreCounter")

[node name="levelIcon" type="Sprite3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.24841, -0.580918, 0 )
sorting_offset = 4.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 450, 1050 )

[node name="levelLabel" type="Label3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.567034, 0, 0, 0, 0.567034, 0, 0, 0, 0.567034, -1.25034, -0.547304, 0 )
sorting_offset = 11.0
alpha_scissor_threshold = 1.0
render_priority = 1
outline_render_priority = 0
outline_modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
text = "89"
font = ExtResource( 9 )
autowrap = true

[node name="base-1" type="Sprite3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.689, 0, 0, 0, 0.689, 0, 0, 0, 0.689, -0.0463423, -0.827772, 0 )
sorting_offset = 3.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 200, 64 )

[node name="base-2" type="Sprite3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.689, 0, 0, 0, 0.689, 0, 0, 0, 0.689, 1.14325, -0.827772, 0 )
sorting_offset = 3.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, -200, 64 )

[node name="timer-icon" type="Sprite3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.210427, 0, 0, 0, 0.210427, 0, 0, 0, 0.210427, 1.666, -0.827909, 0 )
sorting_offset = 12.0
texture = ExtResource( 8 )

[node name="bg" type="Sprite3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.394968, 0, 0, 0, 0.394968, 0, 0, 0, 0.394968, -0.641457, -0.827772, 0 )
sorting_offset = 10.0
centered = false
offset = Vector2( 0, -32 )
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 600, 64 )

[node name="fillTexture" type="Sprite3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.394968, 0, 0, 0, 0.394968, 0, 0, 0, 0.394968, -0.641457, -0.827772, 0 )
sorting_offset = 11.0
centered = false
offset = Vector2( 0, -32 )
modulate = Color( 0.870588, 1, 0.709804, 1 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 300, 64 )

[node name="animatedScore" type="Label3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.304, 0, 0, 0, 0.304, 0, 0, 0, 0.304, -0.518518, -0.197126, 0 )
sorting_offset = 12.0
render_priority = 1
outline_render_priority = 0
modulate = Color( 0.870588, 1, 0.709804, 0 )
outline_modulate = Color( 0.235294, 0.0980392, 0.0156863, 0 )
text = "+458"
font = ExtResource( 6 )
width = 700.0

[node name="scoreCounter" type="Label3D" parent="Top/HudObjectGameBar"]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 1.75048, -0.484488, 0 )
sorting_offset = 12.0
render_priority = 1
outline_render_priority = 0
modulate = Color( 0.94902, 0.796078, 0.654902, 1 )
outline_modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
text = "458"
font = ExtResource( 6 )
horizontal_alignment = 2
width = 700.0

[node name="HudObjectFailBar" type="Spatial" parent="Top"]
script = ExtResource( 5 )
failFill1 = NodePath("fail-1")
failFill2 = NodePath("fail-2")
failFill3 = NodePath("fail-3")

[node name="fail-1" type="Spatial" parent="Top/HudObjectFailBar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.357, -1.15494, 0 )

[node name="fail-bg-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-1"]
transform = Transform( 28.2843, -14.1421, 0, 28.2843, 14.1421, 0, 0, 0, 20, 0, 0, 0 )
sorting_offset = 5.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 2 )

[node name="fail-bg-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-1"]
transform = Transform( 28.2843, 14.1421, 0, -28.2843, 14.1421, 0, 0, 0, 20, 0, 0, 0 )
sorting_offset = 5.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-bg-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-1"]
transform = Transform( 22.6274, -8.48528, 0, 22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 6.0
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-bg-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-1"]
transform = Transform( 22.6274, 8.48528, 0, -22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 6.0
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-1"]
transform = Transform( 22.6274, -8.48528, 0, 22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 7.0
modulate = Color( 0.941176, 0.568627, 0.564706, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-1"]
transform = Transform( 22.6274, 8.48528, 0, -22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 7.0
modulate = Color( 0.941176, 0.568627, 0.564706, 1 )
texture = ExtResource( 2 )

[node name="fail-2" type="Spatial" parent="Top/HudObjectFailBar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1554, 0 )

[node name="fail-bg-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-2"]
transform = Transform( 28.2843, -14.1421, 0, 28.2843, 14.1421, 0, 0, 0, 20, 0, 0, 0 )
sorting_offset = 5.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 2 )

[node name="fail-bg-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-2"]
transform = Transform( 28.2843, 14.1421, 0, -28.2843, 14.1421, 0, 0, 0, 20, 0, 0, 0 )
sorting_offset = 5.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-bg-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-2"]
transform = Transform( 22.6274, -8.48528, 0, 22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 6.0
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-bg-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-2"]
transform = Transform( 22.6274, 8.48528, 0, -22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 6.0
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-2"]
transform = Transform( 22.6274, -8.48528, 0, 22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 7.0
modulate = Color( 0.941176, 0.568627, 0.564706, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-2"]
transform = Transform( 22.6274, 8.48528, 0, -22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 7.0
modulate = Color( 0.941176, 0.568627, 0.564706, 1 )
texture = ExtResource( 2 )

[node name="fail-3" type="Spatial" parent="Top/HudObjectFailBar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35659, -1.1554, 0 )

[node name="fail-bg-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-3"]
transform = Transform( 28.2843, -14.1421, 0, 28.2843, 14.1421, 0, 0, 0, 20, 0, 0, 0 )
sorting_offset = 5.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 2 )

[node name="fail-bg-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-3"]
transform = Transform( 28.2843, 14.1421, 0, -28.2843, 14.1421, 0, 0, 0, 20, 0, 0, 0 )
sorting_offset = 5.0
modulate = Color( 0.235294, 0.0980392, 0.0156863, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-bg-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-3"]
transform = Transform( 22.6274, -8.48528, 0, 22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 6.0
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-bg-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-3"]
transform = Transform( 22.6274, 8.48528, 0, -22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 6.0
modulate = Color( 0.470588, 0.203922, 0.0392157, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-1" type="Sprite3D" parent="Top/HudObjectFailBar/fail-3"]
transform = Transform( 22.6274, -8.48528, 0, 22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 7.0
modulate = Color( 0.941176, 0.568627, 0.564706, 1 )
texture = ExtResource( 2 )

[node name="fail-fill-2" type="Sprite3D" parent="Top/HudObjectFailBar/fail-3"]
transform = Transform( 22.6274, 8.48528, 0, -22.6274, 8.48528, 0, 0, 0, 12, 0, 0, 0 )
sorting_offset = 7.0
modulate = Color( 0.941176, 0.568627, 0.564706, 1 )
texture = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]

[node name="HudTaskResult" parent="Pivot" instance=ExtResource( 12 )]

[node name="Bottom" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )

[node name="HudButtonMenu" parent="Bottom" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.265, 0 )

[node name="HudButtonSymbol1" parent="Bottom" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3, 1.574, 0 )

[node name="HudButtonSymbol2" parent="Bottom" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57411, 0 )
index = 1

[node name="HudButtonSymbol3" parent="Bottom" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3, 1.574, 0 )
index = 2

[node name="ManualAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Top/HudObjectGameBar")
anims/RESET = SubResource( 1 )
anims/time-up-vfx = SubResource( 3 )
anims/time-win = SubResource( 4 )
